Refactor Caddyfile for local development with TLS configuration, enhance health checks for reverse proxy, and add logging for debugging. Introduce Docker Compose setup for app and database services, including environment variables and health checks. Implement Dockerfile for building the application with Go, and update main.go to configure routes. Remove outdated technical exploration documents and static assets to streamline the project structure.

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,19 +2,21 @@
 # Development Configuration (localhost)
 #------------------------------------------------------------
 localhost {
-	# Serve static files (optional if application needs static files)
-	root * /var/www/html
-	file_server
-
-	# Compression
-	encode gzip
+	# TLS configuration for local development
+	tls internal
 
 	# Reverse proxy to application
-	reverse_proxy app:8080
+	reverse_proxy app:8080 {
+		health_uri /
+		health_interval 5s
+		health_timeout 2s
+	}
 
-	# Development-friendly error responses
-	handle_errors {
-		respond "Dev Error: {http.error.status_code}"
+	# Log requests to console for debugging
+	log {
+		output stderr
+		format console
+		level DEBUG
 	}
 }
 
