Refactor Caddyfile to improve static file handling and reverse proxy configuration. Add handling for robots.txt and sitemap.xml. Update Dockerfile to ensure static files are copied and permissions are set. Modify docker-compose.yml to mount static files directory. Enhance index.html with SEO meta tags, structured data, and improved accessibility features. Streamline navigation and content layout for better user experience.

--- a/Caddyfile
+++ b/Caddyfile
@@ -5,11 +5,33 @@ localhost {
 	# TLS configuration for local development
 	tls internal
 
-	# Reverse proxy to application
-	reverse_proxy app:8080 {
-		health_uri /
-		health_interval 5s
-		health_timeout 2s
+	# Handle static files first
+	handle /static/* {
+		uri strip_prefix /static
+		root * /nymshare/static
+		file_server
+	}
+
+	# Handle robots.txt and sitemap.xml
+	handle /robots.txt {
+		rewrite * /static/robots.txt
+		root * /nymshare
+		file_server
+	}
+
+	handle /sitemap.xml {
+		rewrite * /static/sitemap.xml
+		root * /nymshare
+		file_server
+	}
+
+	# Reverse proxy everything else to the app
+	handle /* {
+		reverse_proxy app:8080 {
+			health_uri /
+			health_interval 5s
+			health_timeout 2s
+		}
 	}
 
 	# Log requests to console for debugging
@@ -26,8 +48,30 @@ localhost {
 nymshare.com {
 	# TLS will be automatically handled by Caddy
 	
-	# Reverse proxy all requests to the app
-	reverse_proxy app:8080
+	# Handle static files first
+	handle /static/* {
+		uri strip_prefix /static
+		root * /nymshare/static
+		file_server
+	}
+
+	# Handle robots.txt and sitemap.xml
+	handle /robots.txt {
+		rewrite * /static/robots.txt
+		root * /nymshare
+		file_server
+	}
+
+	handle /sitemap.xml {
+		rewrite * /static/sitemap.xml
+		root * /nymshare
+		file_server
+	}
+
+	# Reverse proxy everything else to the app
+	handle /* {
+		reverse_proxy app:8080
+	}
 
 	# Compression
 	encode gzip
